--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     --color-dark-grey: #4d4d4d;
     --color-grey: #616161;
     --color-light-grey: #7c7979;
-    --color-blue: #73aace;
+    --color-blue: #5081A9;
     --color-yellow: #fff7d1;
     --color-orange: #feb546;
     --color-black: #000000;
@@ -30,6 +30,8 @@
     --weight-regular: 400;
     /* Size */
     --size-border-radius: 4px;
+    /* Animation */
+    --animation-duration: 300ms;
 }
 
 /* Universal tags */
@@ -91,6 +93,16 @@ p {
     margin :4px 0px;
 }
 
+/* Section common */
+.section {
+    text-align:center;
+    padding:50px;
+    max-width:1200px;
+    margin:auto;
+}
+
+
+
 /* Navbar */
 #navbar {
     display:flex;
@@ -141,6 +153,7 @@ p {
     background-position: center;
     padding: 40px;
     text-align:center;
+    margin:auto;
 
 }
 
@@ -171,4 +184,60 @@ p {
 .job__logo {
     width:66px;
     height:50px;
+}
+
+/* About */
+.about__majors {
+    display:flex;
+    justify-content: space-evenly;
+    margin: 80px 0;
+}
+
+.major__icon {
+    width:170px;
+    height: 170px;
+    border-radius: 50%;
+    border: 1px solid var(--color-blue);
+    font-size:70px;
+    line-height: 170px;
+    margin-bottom:16px;
+    color: var(--color-blue);
+}
+
+.major__title,
+.major__description {
+    color: var(--color-dark-grey);
+}
+
+.major__description {
+    font-size:var(--font-small);
+}
+
+.major__icon:hover i {
+    color: var(--color-brown);
+    transform: rotate(-30deg) scale(1.1);
+    transition: all var(--animation-duration);
+}
+
+.job {
+    display:flex;
+    align-items: center;
+}
+
+.job__description {
+    margin: 0 16px;
+    text-align: left;
+}
+
+.job__name,
+.job__period {
+    color: var(--color-dark-grey);
+}
+
+.job__name {
+    font-size: var(--font-small);
+}
+
+.job__period {
+    font-size: var(--font-micro);
 }
