--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@
     --color-light-purple: #ddddff;
     --color-navy: #100C2D;
     --color-brown: #816864;
+    --color-gold: #C1B396;
+    --color-dark-brown:#66524F;
+    --color-light-brown:#A3847F;
     /* Font size */
     --font-large: 48px;
     --font-medium: 28px;
@@ -47,8 +50,7 @@ body {
 
 a {
     text-decoration: none;
-    color: black
-
+    color:black;
 }
 
 ul {
@@ -97,6 +99,10 @@ p {
 .section {
     text-align:center;
     padding:50px;
+    margin:auto;
+}
+
+.section__container {
     max-width:1200px;
     margin:auto;
 }
@@ -241,3 +247,59 @@ p {
 .job__period {
     font-size: var(--font-micro);
 }
+
+/* Skills */
+#skills {
+    background-color: var(--color-gold);
+}
+
+.skillset {
+    display: flex;
+    background-color: var(--color-brown);
+    color: var(--color-white);
+    margin: 20px 0;
+}
+
+.skillset__title {
+    color: var(--color-white);
+}
+
+.skillset__left {
+    flex-basis:60%;
+    background-color: var(--color-dark-brown);
+    padding: 20px 40px;
+}
+
+.skillset__right {
+    flex-basis:40%;
+}
+
+.etc {
+    background-color: var(--color-light-brown);
+}
+
+.skill__description {
+    display:flex;
+    justify-content: space-between ;
+}
+
+.skill__bar {
+    width:100%;
+    height:3px;
+    background-color: var(--color-grey);
+}
+
+.skill {
+    margin-bottom:8px;
+}
+
+.skill_value {
+    height:3px;
+    background-color: var(--color-orange);
+}
+
+.tools,
+.etc{
+    padding:20px;
+}
+
