--- a/style.css
+++ b/style.css
@@ -303,3 +303,99 @@ p {
     padding:20px;
 }
 
+/* work */
+.category__btn {
+    border: 1px solid var(--color-dark-white);
+    border-radius: 4px;
+    font-size:var(--font-regular);
+    padding: 8px 48px;
+    margin:10px 0;
+}
+
+.category__btn.active,
+.category__btn:hover {
+    background-color: var(--color-dark-grey);
+    color:var(--color-white);
+}
+
+.category__count {
+    border:1px solid;
+    background-color: var(--color-orange);
+    border-radius: 50%;
+    color:var(--color-white);
+    width:24px;
+    height:24px;
+    display:inline-block;
+    line-height: 24px;
+    position:relative;
+    top:-20px;
+    left:4px;
+    opacity:0;
+    transition: all var(--animation-duration) ease-in;
+}
+
+.category__btn.active .category__count,
+.category__btn:hover .category__count {
+    opacity: 1;
+    top:0;
+}
+
+.work__project {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin:auto;
+}
+
+.project {
+    position:relative;
+    width: 280px;
+    height: 250px;
+    margin: 2px;
+    background-color: var(--color-light-white);
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.project__img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.project__description {
+    position: absolute;
+    background-color: black;
+    width:100%;
+    height: 100%;
+    top:0;
+    left:0;
+    color:var(--color-white);
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    opacity: 0;
+    transition: all var(--animation-duration);
+    transform: translateY(10px);
+}
+
+.project__description h3 {
+    color:var(--color-white);
+}
+
+.project__description h3:after {
+    content : "";
+    display: block;
+    position: relative;
+    background-color: var(--color-dark-white);
+    width:25px;
+    height:2px;
+    left:50%;
+    margin:8px;
+    margin-left:-12px;
+}
+
+.project__description:hover {
+    opacity:0.8;
+    transform: translateY(0px);
+}
