--- a/style.css
+++ b/style.css
@@ -399,3 +399,55 @@ p {
     opacity:0.8;
     transform: translateY(0px);
 }
+
+/* testmonial */
+#testimonials {
+    background-color: var(--color-light-white);
+}
+
+.testimonials {
+    margin:40px;
+}
+
+.testimonial {
+    display:flex;
+    margin:32px 0;
+}
+
+.testimonial__avatar {
+    border-radius: 50%;
+    width:150px;
+    height:150px;
+}
+
+.testimonial__avatar:nth-child(odd) {
+    margin-right:40px;
+}
+
+.testimonial__avatar:nth-child(even) {
+    margin-left:40px;
+}
+
+
+.testimonial__speech-bubble {
+    background-color: var(--color-white);
+    padding:18px;
+}
+
+.testimonial__speech-bubble p{
+    color: var(--color-dark-grey);
+}
+
+.testimonial__speech-bubble a{
+    color:var(--color-dark-pink);
+}
+
+
+
+.name a{
+    color:var(--color-dark-pink);
+}
+
+.box2 {
+    flex-direction: row-reverse;
+}
