--- a/style.css
+++ b/style.css
@@ -328,16 +328,16 @@ p {
     display:inline-block;
     line-height: 24px;
     position:relative;
-    top:-20px;
+    top:-50px;
     left:4px;
     opacity:0;
-    transition: all var(--animation-duration) ease-in;
 }
 
 .category__btn.active .category__count,
-.category__btn:hover .category__count {
+.category__btn:hover .category__count{
     opacity: 1;
     top:0;
+    transition: all var(--animation-duration) ease-in;
 }
 
 .work__project {
@@ -432,6 +432,7 @@ p {
 .testimonial__speech-bubble {
     background-color: var(--color-white);
     padding:18px;
+    border-radius: var(--size-border-radius);
 }
 
 .testimonial__speech-bubble p{
