--- a/style.css
+++ b/style.css
@@ -151,6 +151,15 @@ p {
     height:26px;
 }
 
+.navbar__toggle-btn {
+    position:absolute;
+    top:24px;
+    right: 32px;
+    font-size: 24px;
+    color:var(--color-black);
+    display:none;
+}
+
 /* Home **/
 #home {
     background: url("imgs/background.png");
@@ -477,4 +486,44 @@ p {
     transform: scale(1.1);
     color:yellow;
     transition: var(--animation-duration) ease-in;
+}
+
+/*For below 768px screen width*/
+@media screen and (max-width:768px) {
+    .navbar__toggle-btn {
+        display:block;
+    }
+    #navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    
+    .navbar__menu {
+        flex-direction: column;
+        align-items: center;
+        width:100%;
+        display:none;
+    }
+
+    .about__majors {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .major {
+        margin-bottom: 38px;
+    }
+
+    .skillset {
+        flex-direction: column;
+    }
+
+    .project {
+        flex-grow: 1;
+    }
+
+    .testimonial__avatar {
+        width:80px;
+        height:80px;
+    }
 }
