--- a/style.css
+++ b/style.css
@@ -180,11 +180,7 @@ p {
     padding-top: 120px;
     text-align:center;
     margin:auto;
-    opacity:1;
 }
-
-
-
 
 .home__avatar {
     width:250px;
@@ -502,6 +498,28 @@ p {
     transition: var(--animation-duration) ease-in;
 }
 
+/* Scroll */
+.arrow__up {
+    position:fixed;
+    bottom: 50px;
+    right: 50px;
+    width: 70px;
+    height: 70px;
+    font-size: 50px;
+    color: var(--color-white);
+    background-color: var(--color-gold);
+    border-radius: 50%;
+    opacity: 0;
+    pointer-events: none;
+    transition: all var(--animation-duration) ease-in-out;
+}
+
+.arrow__up.visible {
+    opacity:1;
+    pointer-events: visible;
+}
+
+
 /*For below 768px screen width*/
 @media screen and (max-width:768px) {
     .navbar__toggle-btn {
@@ -541,3 +559,4 @@ p {
         height:80px;
     }
 }
+
