--- a/style.css
+++ b/style.css
@@ -364,7 +364,23 @@ p {
     flex-wrap: wrap;
     justify-content: center;
     margin:auto;
+    transition: all var(--animation-duration) ease-out;
+    opacity: 1;
 }
+
+.work__project.anim-out {
+    opacity:0.5;
+    transform: scale(0.96) translateY(40px);
+}
+
+.work__project.work__project--front {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin:auto;
+}
+
+
 
 .project {
     position:relative;
@@ -375,6 +391,10 @@ p {
     display:flex;
     justify-content: center;
     align-items: center;
+}
+
+.project.invisible {
+    display:none;
 }
 
 .project__img {
