--- a/style.css
+++ b/style.css
@@ -137,14 +137,12 @@ p {
     padding: 8px 12px;
     margin: 0 4px;
     cursor: pointer;
+    border: 1px solid transparent;
     border-radius: var(--size-border-radius);
 }
 
-.navbar__menu__item.active {
-    border: 1px solid var(--color-white);
-}
-
 .navbar__menu__item:hover {
+    border-color:var(--color-dark-pink);
     background-color: var(--color-light-grey);
 }
 
@@ -331,7 +329,7 @@ p {
     margin:10px 0;
 }
 
-.category__btn.active,
+.category__btn.selected,
 .category__btn:hover {
     background-color: var(--color-dark-grey);
     color:var(--color-white);
@@ -352,7 +350,7 @@ p {
     opacity:0;
 }
 
-.category__btn.active .category__count,
+.category__btn.selected .category__count,
 .category__btn:hover .category__count{
     opacity: 1;
     top:0;
