--- a/style.css
+++ b/style.css
@@ -126,8 +126,9 @@ p {
 #navbar.navbar--dark {
     background-color: var(--color-light-blue);
     padding:8px;
-    z-index: 1;
+    z-index: 1; 
 }
+
 
 .navbar__menu {
     display:flex;
@@ -161,11 +162,16 @@ p {
 
 .navbar__toggle-btn {
     position:absolute;
-    top:24px;
+    top:25px;
     right: 32px;
     font-size: 24px;
     color:var(--color-black);
     display:none;
+    transition: all var(--animation-duration) ease-in-out;
+}
+
+.navbar__toggle-btn.toggle-dark {
+    top:16px;
 }
 
 /* Home **/
@@ -417,7 +423,7 @@ p {
 }
 
 .project__description h3 {
-    color:var(--color-white);
+    color:var(--color-orange);
 }
 
 .project__description h3:after {
@@ -425,11 +431,11 @@ p {
     display: block;
     position: relative;
     background-color: var(--color-dark-white);
-    width:25px;
+    width:50px;
     height:2px;
     left:50%;
     margin:8px;
-    margin-left:-12px;
+    margin-left:-25px;
 }
 
 .project__description:hover {
@@ -546,13 +552,19 @@ p {
     #navbar {
         flex-direction: column;
         align-items: flex-start;
+        background-color: #6CBFE9;
     }
+
     
     .navbar__menu {
         flex-direction: column;
         align-items: center;
         width:100%;
         display:none;
+    }
+
+    .navbar__menu.open {
+        display:flex;
     }
 
     .about__majors {
